# actix-clean-architecture-api

./: .env  .env.prod  Cargo.toml  Dockerfile  LICENSE  README.md
src/: error.rs  main.rs
src/config/: env.rs  mod.rs
src/controller/: file_controller.rs  mod.rs  role_controller.rs  root_controller.rs  user_controller.rs
src/dto/: auth.rs  custom.rs  mod.rs  role.rs  user.rs
src/entity/: role.rs  user.rs
src/query/: mod.rs  role.rs  user.rs
src/service/: file.rs  mod.rs  role.rs  user.rs
src/utils/: encryption.rs  file.rs  helper.rs  jwt.rs  mod.rs  swagger_docs.rs  web_socket.rs
