[package]
name = "sample_actix_webapi"
version = "2.0.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = { version = "0.6.6" }
actix-multipart = { version = "0.7" }
actix-web = { version = "4.9" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = { version = "0.15" }
jsonwebtoken = { version = "9" }
lazy_static = { version = "1.5" }
sanitize-filename = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "rust_decimal",
    "postgres",
    "migrate",
    "macros",
    "chrono",
    "uuid",
] }
thiserror = { version = "2" }
uuid = { version = "1.11", features = ["v4"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web", "debug-embed"] }
validator = { version = "0.19", features = ["derive"] }
utoipa = { version = "5", features = [
    "actix_extras",
    "chrono",
    "decimal",
    "uuid",
    "openapi_extensions",
] }
sha2 = { version = "0.10.8" }
base64ct = { version = "1.6.0" }
rust_xlsxwriter = { version = "0.79" }
image = { version = "0.25" }
fast_image_resize = { version = "5" }
actix-cors = { version = "0.7" }
actix-web-actors = { version =  "4.3" }
